--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "laravel/socialite": "^5.15",
         "laravel/tinker": "^2.9",
         "laravel/ui": "^4.5",
-        "livewire/livewire": "^3.0"
+        "livewire/livewire": "^3.0",
+        "mcamara/laravel-localization": "^2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
